--- a/backend/server-a/Dockerfile
+++ b/backend/server-a/Dockerfile
@@ -12,3 +12,25 @@
 # This line fetches the Node Docker image with tag "10"
 # from Docker Hub.
 FROM node:10
+
+# Create app directory
+WORKDIR /usr/src/app
+
+# Install app dependencies
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+COPY package*.json ./
+
+# install npm
+RUN npm install
+
+# Bundle app source
+COPY . .
+
+# give execution permission
+RUN chmod +x /usr/src/app/utils/wait-for-it.sh
+
+# Expose port
+EXPOSE 8080
+
+# command to execute the server-a
+CMD [ "npm", "start" ]
